--- a/shopping.css
+++ b/shopping.css
@@ -5,53 +5,55 @@
   src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
-h1, h2, h3{
+h1, h2, h3 {
 	text-align: center;
 	font-weight: bold;
 }
 
-.small-img{
+.small-img {
 	height: 150px;
 }
 
-.small-img-wrapper{
+.small-img-wrapper {
 	height: 150px;
 	overflow: hidden;
 }
 
-.imageAndText {
+.big-img-wrapper {
 	position: relative;
 	width: 100%;
 	overflow: hidden;
 }
 
-.image-text {
-	height: auto;
-}
-
-.imageAndText img {
+.big-img-wrapper img {
   	width: 100%;
-  	height: auto;
+  	max-height: 450px;
   	overflow: hidden;
 }
 
-.imageAndText .btn {
+.big-image-floating-text{
+    z-index: 1;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.big-img-wrapper .btn {
   	position: absolute;
-  	top: 90%;
-  	left: 50%;
+  	top: 50%;
+  	left: 20%;
   	transform: translate(-50%, -50%);
   	-ms-transform: translate(-50%, -50%);
-  	background-color: #555;
+  	background-color: grey;
   	color: black;
   	font-size: 16px;
   	padding: 12px 24px;
   	border: none;
   	cursor: pointer;
-  	border-radius: 5px;
+  	border-radius: 10px;
   	text-align: center;
 }
 
-.imageAndText .btn:hover {
+.big-img-wrapper .btn:hover {
   	background-color: white;
 }
 .set-image {
@@ -63,17 +65,17 @@ h1, h2, h3{
 
 .small-img-wrapper .btn {
 	position: absolute;
-  	top: 80%;
-  	left: 30%;
+  	top: 60%;
+  	left: 25%;
   	transform: translate(-50%, -50%);
   	-ms-transform: translate(-50%, -50%);
-  	background-color: #555;
+  	background-color: grey;
   	color: black;
   	font-size: 10px;
   	padding: 12px 24px;
   	border: none;
   	cursor: pointer;
-  	border-radius: 5px;
+  	border-radius: 10px;
   	text-align: center;
 }
 
@@ -93,14 +95,20 @@ h1, h2, h3{
   	top: 20px;
   	left: 15px;
   	overflow: hidden;
+  	font-weight: bold;
 }
 
 .top-right {
-	position: absolute;
-	z-index: 1;
-	top: 8px;
-	right: 16px;
-	overflow: hidden;
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-weight: bold;
+}
+
+.small-image-floating-text{
+    z-index: 1;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .middle-left {
@@ -109,4 +117,63 @@ h1, h2, h3{
 	top: 20%;
 	left: 15%;
 	overflow: hidden;
+	font-size: 25px;
+	font-weight: bold;
+}
+
+.carousel-caption {
+	font-size: 15px;
+	font-weight: bold;
+}
+
+#slides{
+  color: grey;
+  background-color: #c3abcd;
+}
+
+.carousel{
+  color: grey;
+  background-color: #c3abcd;
+}
+.carousel .item{
+  color: grey;
+  background-color: #c3abcd;
+}
+
+.product-img-wrapper .btn {
+	position: absolute;
+  	top: 210%;
+  	left: 60%;
+  	transform: translate(-50%, -50%);
+  	-ms-transform: translate(-50%, -50%);
+  	background-color: grey;
+  	color: black;
+  	font-size: 15px;
+  	padding: 12px 24px;
+  	border: none;
+  	cursor: pointer;
+  	border-radius: 10px;
+  	text-align: center;
+}
+
+.product-img-wrapper img {
+	width: 100%;
+	max-height: 250px;
+	overflow: hidden;
+}
+
+.product-img-wrapper .btn:hover {
+	background-color: white;
+}
+
+.middle-top {
+  position: absolute;
+  top: 200%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+}
+
+.product-img-floating-text{
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.2);
 }
