--- a/shopping.css
+++ b/shopping.css
@@ -10,6 +10,55 @@ h1, h2, h3 {
 	font-weight: bold;
 }
 
+.navbar-icon {
+  width: 100%;
+  background-color: #555;
+}
+
+.navbar-icon a {
+  float: left;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+  font-size: 12px;
+}
+
+.navbar-icon a:hover {
+  background-color: #000;
+}
+
+.fa {
+  font-size: 12px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  /*background: #3B5998;*/
+  color: white;
+}
+
+.fa-twitter {
+  /*background: #55ACEE;*/
+  color: white;
+}
+
+.fa-google {
+  /*background: #dd4b39;*/
+  color: white;
+}
+
+.fa-yahoo {
+  /*background: #430297;*/
+  color: white;
+}
+
 .small-img {
 	height: 150px;
 }
@@ -22,18 +71,20 @@ h1, h2, h3 {
 .big-img-wrapper {
 	position: relative;
 	width: 100%;
+	padding: 2px, 12px;
 	overflow: hidden;
 }
 
 .big-img-wrapper img {
   	width: 100%;
-  	max-height: 450px;
   	overflow: hidden;
 }
 
 .big-image-floating-text{
     z-index: 1;
     overflow: hidden;
+    margin: 10px;
+    border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -43,10 +94,10 @@ h1, h2, h3 {
   	left: 20%;
   	transform: translate(-50%, -50%);
   	-ms-transform: translate(-50%, -50%);
-  	background-color: grey;
-  	color: black;
+  	background-color: lightblack;
+  	color: grey;
   	font-size: 16px;
-  	padding: 12px 24px;
+  	padding: 12px, 24px;
   	border: none;
   	cursor: pointer;
   	border-radius: 10px;
@@ -72,7 +123,7 @@ h1, h2, h3 {
   	background-color: grey;
   	color: black;
   	font-size: 10px;
-  	padding: 12px 24px;
+  	padding: 12px, 24px;
   	border: none;
   	cursor: pointer;
   	border-radius: 10px;
@@ -142,12 +193,8 @@ h1, h2, h3 {
 
 .product-img-wrapper .btn {
 	position: absolute;
-  	top: 210%;
-  	left: 60%;
-  	transform: translate(-50%, -50%);
-  	-ms-transform: translate(-50%, -50%);
-  	background-color: grey;
-  	color: black;
+  	top: 300px;
+  	left: 55%;
   	font-size: 15px;
   	padding: 12px 24px;
   	border: none;
@@ -158,7 +205,13 @@ h1, h2, h3 {
 
 .product-img-wrapper img {
 	width: 100%;
-	max-height: 250px;
+	overflow: hidden;
+}
+
+.product-img-wrapper {
+	max-height: 400px;
+	position: relative;
+	width: 100%;
 	overflow: hidden;
 }
 
@@ -168,12 +221,13 @@ h1, h2, h3 {
 
 .middle-top {
   position: absolute;
-  top: 200%;
+  top: 240px;
   left: 60%;
   transform: translate(-50%, -50%);
 }
 
 .product-img-floating-text{
     z-index: 1;
+    /*border-radius: 10px;*/
     background-color: rgba(0, 0, 0, 0.2);
 }
