--- a/shopping.css
+++ b/shopping.css
@@ -5,7 +5,7 @@
   src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5, h6 {
 	text-align: center;
 	font-weight: bold;
 }
@@ -88,25 +88,6 @@ h1, h2, h3 {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.big-img-wrapper .btn {
-  	position: absolute;
-  	top: 50%;
-  	left: 20%;
-  	transform: translate(-50%, -50%);
-  	-ms-transform: translate(-50%, -50%);
-  	background-color: lightblack;
-  	color: grey;
-  	font-size: 16px;
-  	padding: 12px, 24px;
-  	border: none;
-  	cursor: pointer;
-  	border-radius: 10px;
-  	text-align: center;
-}
-
-.big-img-wrapper .btn:hover {
-  	background-color: white;
-}
 .set-image {
   	position: relative;
   	text-align: center;
@@ -114,30 +95,10 @@ h1, h2, h3 {
   	overflow: hidden;
 }
 
-.small-img-wrapper .btn {
-	position: absolute;
-  	top: 60%;
-  	left: 25%;
-  	transform: translate(-50%, -50%);
-  	-ms-transform: translate(-50%, -50%);
-  	background-color: grey;
-  	color: black;
-  	font-size: 10px;
-  	padding: 12px, 24px;
-  	border: none;
-  	cursor: pointer;
-  	border-radius: 10px;
-  	text-align: center;
-}
-
 .small-img-wrapper img {
 	width: 100%;
 	height: auto;
 	overflow: hidden;
-}
-
-.small-img-wrapper .btn:hover {
-	background-color: white;
 }
 
 .top-left {
@@ -165,7 +126,7 @@ h1, h2, h3 {
 .middle-left {
 	position: absolute;
 	z-index: 1;
-	top: 20%;
+	top: 30%;
 	left: 15%;
 	overflow: hidden;
 	font-size: 25px;
@@ -191,18 +152,6 @@ h1, h2, h3 {
   background-color: #c3abcd;
 }
 
-.product-img-wrapper .btn {
-	position: absolute;
-  	top: 300px;
-  	left: 55%;
-  	font-size: 15px;
-  	padding: 12px 24px;
-  	border: none;
-  	cursor: pointer;
-  	border-radius: 10px;
-  	text-align: center;
-}
-
 .product-img-wrapper img {
 	width: 100%;
 	overflow: hidden;
@@ -215,10 +164,6 @@ h1, h2, h3 {
 	overflow: hidden;
 }
 
-.product-img-wrapper .btn:hover {
-	background-color: white;
-}
-
 .middle-top {
   position: absolute;
   top: 240px;
@@ -226,8 +171,77 @@ h1, h2, h3 {
   transform: translate(-50%, -50%);
 }
 
-.product-img-floating-text{
+.product-img-floating-text	{
     z-index: 1;
-    /*border-radius: 10px;*/
+    border-radius: 15px;
+    padding: 5px 15px;
     background-color: rgba(0, 0, 0, 0.2);
+}
+
+.fresh-stories-img-floating-text {
+	z-index: 1;
+	background-color: rgba(0, 0, 0, 0.2);
+}
+
+.fresh-stories-img-wrapper img {
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+}
+
+.fresh-stories-img-wrapper {
+	max-height: 400px;
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+}
+
+.right-top {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-weight: bold;
+    overflow: hidden;
+}
+
+.left-top {
+	position: absolute;
+  	top: 40px;
+  	left: 5px;
+  	overflow: hidden;
+  	font-weight: bold;
+}
+
+.bottom-left {
+	position: absolute;
+	bottom: 2px;
+	left: 5px;
+	overflow: hidden;
+	font-weight: bold;
+}
+
+.carousel-caption {
+    position: absolute;
+    z-index: 1;
+    display:table;
+    width:100%;
+    height:100%;
+}
+
+.absolute-div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 5px;
+}
+
+.carousel-caption h3 {
+    display:table-cell;
+    vertical-align: middle;
+    text-align:center;
+}
+
+.item {
+    position:relative;
 }
