jump to section fixed.

--- a/shopping.css
+++ b/shopping.css
@@ -1,10 +1,3 @@
-@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
-@font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-}
-
 h1, h2, h3, h4, h5, h6 {
 	text-align: center;
 	font-weight: bold;
@@ -40,22 +33,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .fa-facebook {
-  /*background: #3B5998;*/
   color: white;
 }
 
 .fa-twitter {
-  /*background: #55ACEE;*/
   color: white;
 }
 
 .fa-google {
-  /*background: #dd4b39;*/
   color: white;
 }
 
 .fa-yahoo {
-  /*background: #430297;*/
   color: white;
 }
 
@@ -104,22 +93,24 @@ h1, h2, h3, h4, h5, h6 {
 .top-left {
   	position: absolute;
   	z-index: 1;
-  	top: 20px;
-  	left: 15px;
+  	top: 10px;
+  	left: 30px;
   	overflow: hidden;
   	font-weight: bold;
 }
 
 .top-right {
     position: absolute;
-    top: 8px;
-    right: 16px;
+    top: 15px;
+    right: 30px;
     font-weight: bold;
 }
 
 .small-image-floating-text{
     z-index: 1;
     overflow: hidden;
+    border-radius: 10px;
+    padding: 5px 10px;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -138,15 +129,11 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
 }
 
-#slides{
-  color: grey;
-  background-color: #c3abcd;
-}
-
 .carousel{
   color: grey;
   background-color: #c3abcd;
 }
+
 .carousel .item{
   color: grey;
   background-color: #c3abcd;
@@ -166,7 +153,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .middle-top {
   position: absolute;
-  top: 240px;
+  top: 250px;
   left: 60%;
   transform: translate(-50%, -50%);
 }
@@ -174,7 +161,7 @@ h1, h2, h3, h4, h5, h6 {
 .product-img-floating-text	{
     z-index: 1;
     border-radius: 15px;
-    padding: 5px 15px;
+    padding: 8px 16px;
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -183,13 +170,13 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: rgba(0, 0, 0, 0.2);
 }
 
-.fresh-stories-img-wrapper img {
+.img-wrapper img {
 	width: 100%;
 	height: auto;
 	overflow: hidden;
 }
 
-.fresh-stories-img-wrapper {
+.img-wrapper {
 	max-height: 400px;
 	position: relative;
 	width: 100%;
@@ -198,13 +185,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .right-top {
     position: absolute;
-    top: 8px;
-    right: 16px;
+    top: 15px;
+    right: 30px;
     font-weight: bold;
     overflow: hidden;
 }
 
-.left-top {
+.left-top {	
 	position: absolute;
   	top: 40px;
   	left: 5px;
@@ -220,28 +207,486 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
 }
 
-.carousel-caption {
-    position: absolute;
-    z-index: 1;
-    display:table;
-    width:100%;
-    height:100%;
+.checked {
+	color: orange;
 }
 
-.absolute-div {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 5px;
+.multi-item-carousel{
+	.carousel-inner{
+    > .item{
+      	transition: 500ms ease-in-out left;
+    }
+    .active{
+      &.left{
+        left:-33%;
+      }
+      &.right{
+        left:33%;
+      }
+    }
+    .next{
+      left: 33%;
+    }
+    .prev{
+      left: -33%;
+    }
+    @media all and (transform-3d), (-webkit-transform-3d) {
+      > .item{
+        // use your favourite prefixer here
+        transition: 500ms ease-in-out left;
+        transition: 500ms ease-in-out all;
+        backface-visibility: visible;
+        transform: none!important;
+      }
+    }
+  }
+  .carousel-control{
+    &.left, &.right{
+      background-image: none;
+    }
+  }
 }
 
-.carousel-caption h3 {
-    display:table-cell;
-    vertical-align: middle;
-    text-align:center;
+#theCarousel img {
+	width: 100%;
+	height: 200px;
+	max-height: 200px;
 }
 
-.item {
-    position:relative;
+h3.h3{
+	text-align:center;
+	margin:1em;
+	text-transform:capitalize;
+	font-size:1.7em;
+}
+
+.product-grid{
+	font-family:Raleway,sans-serif;
+	text-align:center;
+	padding:0 0 72px;
+	border:1px solid rgba(0,0,0,.1);
+	overflow:hidden;
+	position:relative;
+	z-index:1;
+}
+
+.product-grid .product-image{
+	position:relative;
+	transition:all .3s ease 0s;
+}
+
+.product-grid .product-image a{
+	display:block;
+}
+
+.product-grid .product-image img{
+	width:100%;
+	height:auto;
+}
+
+.product-grid .pic-1{
+	opacity:1;
+	transition:all .3s ease-out 0s;
+}
+
+.product-grid:hover .pic-1{
+	opacity:1;
+}
+
+.product-grid .pic-2{
+	opacity:0;
+	position:absolute;
+	top:0;
+	left:0;
+	transition:all .3s ease-out 0s;
+}
+
+.product-grid:hover .pic-2{
+	opacity:1;
+}
+
+.product-grid .social{
+	width:150px;
+	padding:0;
+	margin:0;
+	list-style:none;
+	opacity:0;
+	transform:translateY(-50%) translateX(-50%);
+	position:absolute;
+	top:60%;
+	left:50%;
+	z-index:1;
+	transition:all .3s ease 0s;
+}
+
+.product-grid:hover .social{
+	opacity:1;
+	top:50%;
+}
+
+.product-grid .social li{
+	display:inline-block;
+}
+
+.product-grid .social li a{
+	color:#fff;
+	background-color:#333;
+	font-size:16px;
+	line-height:40px;
+	text-align:center;
+	height:40px;
+	width:40px;
+	margin:0 2px;
+	display:block;
+	position:relative;
+	transition:all .3s ease-in-out;
+}
+
+.product-grid .social li a:hover{
+	color:#fff;
+	background-color:#ef5777;
+}
+
+.product-grid .social li a:after,.product-grid .social li a:before{
+	content:attr(data-tip);
+	color:#fff;
+	background-color:#000;
+	font-size:12px;
+	letter-spacing:1px;
+	line-height:20px;
+	padding:1px 5px;
+	white-space:nowrap;
+	opacity:0;
+	transform:translateX(-50%);
+	position:absolute;
+	left:50%;
+	top:-30px;
+}
+
+.product-grid .social li a:after{
+	content:'';
+	height:15px;
+	width:15px;
+	border-radius:0;
+	transform:translateX(-50%) rotate(45deg);
+	top:-20px;
+	z-index:-1;
+}
+
+.product-grid .social li a:hover:after,.product-grid .social li a:hover:before{
+	opacity:1;
+}
+
+.product-grid .product-discount-label,.product-grid .product-new-label{
+	color:#fff;
+	background-color:#ef5777;
+	font-size:12px;
+	text-transform:uppercase;
+	padding:2px 7px;
+	display:block;
+	position:absolute;
+	top:10px;
+	left:0;
+}
+
+.product-grid .product-discount-label{
+	background-color:#333;
+	left:auto;
+	right:0;
+}
+
+.product-grid .rating{
+	color:#FFD200;
+	font-size:12px;
+	padding:12px 0 0;
+	margin:0;
+	list-style:none;
+	position:relative;
+	z-index:-1;
+}
+
+.product-grid .rating li.disable{
+	color:rgba(0,0,0,.2);
+}
+
+.product-grid .product-content{
+	background-color:#fff;
+	text-align:center;
+	padding:12px 0;
+	margin:0 auto;
+	position:absolute;
+	left:0;
+	right:0;
+	bottom:-27px;
+	z-index:1;
+	transition:all .3s;
+}
+
+.product-grid:hover .product-content{
+	bottom:0;
+}
+
+.product-grid .title{
+	font-size:13px;
+	font-weight:400;
+	letter-spacing:.5px;
+	text-transform:capitalize;
+	margin:0 0 10px;
+	transition:all .3s ease 0s;
+}
+
+.product-grid .title a{
+	color:#828282;
+}
+
+.product-grid .title a:hover,.product-grid:hover .title a{
+	color:#ef5777;
+}
+
+.product-grid .price{
+	color:#333;
+	font-size:17px;
+	font-family:Montserrat,sans-serif;
+	font-weight:700;
+	letter-spacing:.6px;
+	margin-bottom:8px;
+	text-align:center;
+	transition:all .3s;
+}
+
+.product-grid .price span{
+	color:#999;
+	font-size:13px;
+	font-weight:400;
+	text-decoration:line-through;
+	margin-left:3px;
+	display:inline-block;
+}
+
+.product-grid .add-to-cart{
+	color:#000;
+	font-size:13px;
+	font-weight:600;
+}
+
+@media only screen and (max-width:990px){.product-grid{margin-bottom:30px}
+}
+
+.product-grid4,.product-grid4 .product-image4{
+	position:relative;
+}
+
+.product-grid4{
+	font-family:Poppins,sans-serif;
+	text-align:center;
+	border-radius:5px;
+	overflow:hidden;
+	z-index:1;
+	transition:all .3s ease 0s;	
+}
+
+.product-grid4:hover{
+	box-shadow:0 0 10px rgba(0,0,0,.2);
+}
+
+.product-grid4 .product-image4 a{
+	display:block;
+}
+
+.product-grid4 .product-image4 img{
+	width:100%;
+	height:auto;
+}
+
+.product-grid4 .pic-1{
+	opacity:1;
+	transition:all .5s ease-out 0s;
+}
+
+.product-grid4:hover .pic-1{
+	opacity:0;
+}
+
+.product-grid4 .pic-2{
+	position:absolute;
+	top:0;
+	left:0;
+	opacity:0;
+	transition:all .5s ease-out 0s;
+}
+
+.product-grid4:hover .pic-2{
+	opacity:1;
+}
+
+.product-grid4 .social{
+	width:180px;
+	padding:0;
+	margin:0 auto;
+	list-style:none;
+	position:absolute;
+	right:0;
+	left:0;
+	top:50%;
+	transform:translateY(-50%);
+	transition:all .3s ease 0s;
+}
+
+.product-grid4 .social li{
+	display:inline-block;
+	opacity:0;
+	transition:all .7s;
+}
+
+.product-grid4 .social li:nth-child(1){
+	transition-delay:.15s;
+}
+
+.product-grid4 .social li:nth-child(2){
+	transition-delay:.3s;
+}
+
+.product-grid4 .social li:nth-child(3){
+	transition-delay:.45s;
+}
+
+.product-grid4:hover .social li{
+	opacity:1;
+}
+
+.product-grid4 .social li a{
+	color:#222;
+	background:#fff;
+	font-size:17px;
+	line-height:36px;
+	width:40px;
+	height:36px;
+	border-radius:2px;
+	margin:0 5px;
+	display:block;
+	transition:all .3s ease 0s;
+}
+
+.product-grid4 .social li a:hover{
+	color:#fff;
+	background:#16a085;
+}
+
+.product-grid4 .social li a:after,.product-grid4 .social li a:before{
+	content:attr(data-tip);
+	color:#fff;
+	background-color:#000;
+	font-size:12px;
+	line-height:20px;
+	border-radius:3px;
+	padding:0 5px;
+	white-space:nowrap;
+	opacity:0;
+	transform:translateX(-50%);
+	position:absolute;
+	left:50%;
+	top:-30px;
+}
+
+.product-grid4 .social li a:after{
+	content:'';
+	height:15px;
+	width:15px;
+	border-radius:0;
+	transform:translateX(-50%) rotate(45deg);
+	top:-22px;
+	z-index:-1;
+}
+
+.product-grid4 .social li a:hover:after,.product-grid4 .social li a:hover:before{
+	opacity:1;
+}
+
+.product-grid4 .product-discount-label,.product-grid4 .product-new-label{
+	color:#fff;
+	background-color:#16a085;
+	font-size:13px;
+	font-weight:800;
+	text-transform:uppercase;
+	line-height:45px;
+	height:45px;
+	width:45px;
+	border-radius:50%;
+	position:absolute;
+	left:10px;
+	top:15px;
+	transition:all .3s;
+}
+
+.product-grid4 .product-discount-label{
+	left:auto;
+	right:10px;
+	background-color:#d7292a;
+}
+
+.product-grid4:hover .product-new-label{
+	opacity:0;
+}
+
+.product-grid4 .product-content{
+	padding:25px;
+}
+
+.product-grid4 .title{
+	font-size:15px;
+	font-weight:400;
+	text-transform:capitalize;
+	margin:0 0 7px;
+	transition:all .3s ease 0s;
+}
+
+.product-grid4 .title a{
+	color:#222;
+}
+
+.product-grid4 .title a:hover{
+	color:#16a085;
+}
+
+.product-grid4 .price{
+	color:#16a085;
+	font-size:17px;
+	font-weight:700;
+	margin:0 2px 15px 0;
+	display:block;
+}
+
+.product-grid4 .price span{
+	color:#909090;
+	font-size:13px;
+	font-weight:400;
+	letter-spacing:0;
+	text-decoration:line-through;
+	text-align:left;
+	vertical-align:middle;
+	display:inline-block;
+}
+
+.product-grid4 .add-to-cart{
+	border:1px solid #e5e5e5;
+	display:inline-block;
+	padding:10px 20px;
+	color:#888;
+	font-weight:600;
+	font-size:14px;
+	border-radius:4px;
+	transition:all .3s;
+}
+
+.product-grid4:hover .add-to-cart{
+	border:1px solid transparent;
+	background:#16a085;
+	color:#fff;
+}
+.product-grid4 .add-to-cart:hover{
+	background-color:#505050;
+	box-shadow:0 0 10px rgba(0,0,0,.5);
+}
+
+@media only screen and (max-width:990px){.product-grid4{margin-bottom:30px}
 }
