--- a/shopping.css
+++ b/shopping.css
@@ -443,7 +443,7 @@ h3.h3{
 	color:#ef5777;
 }
 
-.product-grid .price{
+/*.product-grid .price{
 	color:#333;
 	font-size:17px;
 	font-family:Montserrat,sans-serif;
@@ -452,16 +452,16 @@ h3.h3{
 	margin-bottom:8px;
 	text-align:center;
 	transition:all .3s;
-}
+}*/
 
-.product-grid .price span{
+/*.product-grid .price span{
 	color:#999;
 	font-size:13px;
 	font-weight:400;
 	text-decoration:line-through;
 	margin-left:3px;
 	display:inline-block;
-}
+}*/
 
 .product-grid .add-to-cart{
 	color:#000;
@@ -648,7 +648,7 @@ h3.h3{
 	color:#16a085;
 }
 
-.product-grid4 .price{
+/*.product-grid4 .price{
 	color:#16a085;
 	font-size:17px;
 	font-weight:700;
@@ -665,7 +665,7 @@ h3.h3{
 	text-align:left;
 	vertical-align:middle;
 	display:inline-block;
-}
+}*/
 
 .product-grid4 .add-to-cart{
 	border:1px solid #e5e5e5;
@@ -689,4 +689,64 @@ h3.h3{
 }
 
 @media only screen and (max-width:990px){.product-grid4{margin-bottom:30px}
+}
+
+header {
+	height: 100px;
+}
+
+#cart-container {
+	float: right;
+	width: 210px;
+	position: relative;
+}
+
+#itemCount {
+	position: absolute;
+	display: none;
+	top: -10px;
+	left: -10px;
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
+	background: red;
+	color: white;
+	text-align: center;
+}
+
+#shoppingCart {
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	display: none;
+	position: absolute;
+	z-index: 9999;
+	background: rgba(0, 0, 0, 0.6);
+}
+
+#cartItemsContainer {
+  	position: relative;
+  	width: 600px;
+  	left: 50%;
+  	top: 150px;
+  	margin-left: -300px;
+  	padding: 40px;
+  	box-shadow: 0 0 10px black;
+  	background: #e9e9e9;
+  	overflow: auto;
+}
+
+#cartItemsContainer i {
+  	position: absolute;
+  	top: 20px;
+  	right: 20px;
+}
+
+.price-container {
+  	margin-top: 20px;
+}
+
+.removeItem {
+  	margin-left: 40px;
 }
